plugins {
    id 'application'
}

group = 'pe.plazavea'
version = '1.0.0'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

application {
    mainClass = 'pe.plazavea.perecibles.App'
    applicationDefaultJvmArgs = [
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        '--add-opens', 'java.base/java.util=ALL-UNNAMED',
        '--add-opens', 'java.desktop/sun.awt=ALL-UNNAMED',
        '--add-opens', 'java.desktop/sun.swing=ALL-UNNAMED',
    ]
}

repositories {
    mavenCentral()
}

dependencies {
    // UI
    implementation 'com.formdev:flatlaf:3.6'
    implementation 'com.formdev:flatlaf-extras:3.6'
    implementation 'com.miglayout:miglayout-swing:11.4.2'

    // JPA + Hibernate
    implementation 'org.springframework.data:spring-data-jpa:3.2.5'
    implementation 'org.hibernate.orm:hibernate-core:6.4.4.Final'

    // PostgreSQL
    runtimeOnly 'org.postgresql:postgresql:42.7.3'

    // .env reader
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'

    // BCrypt
    implementation 'org.mindrot:jbcrypt:0.4'

    // Tests
    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()
}
